--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Surjith S M / @surjithctly
             <div class="container">
                 <!--========== Brand and toggle get grouped for better mobile display ==========-->
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#header"><img src="images/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="#header"><img src="images/logo-white.png" class="white-logo" alt=""></a>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
