--- a/index.html
+++ b/index.html
@@ -55,19 +55,20 @@ Surjith S M / @surjithctly
 
 <body class="home" data-scroll-animation="true">
 
-    <!--==========Preloader==========-->
-    <div id="loading">
-        <div id="loading-center">
-            <div id="loading-center-absolute">
-                <div class="object" id="object_four"></div>
-                <div class="object" id="object_three"></div>
-                <div class="object" id="object_two"></div>
-                <div class="object" id="object_one"></div>
-            </div>
-        </div>
-    </div>
+  <!--==========Preloader==========-->
 
-    <!--==========Header==========-->
+  <div id="loading">
+    <div id="loading-center">
+                  <div id="loading-center-absolute">
+                  <div class="object" id="object_four"></div>
+               <div class="object" id="object_three"></div>
+               <div class="object" id="object_two"></div>
+               <div class="object" id="object_one"></div>
+           </div>
+       </div>
+   </div>
+
+   <!--==========Header==========-->
     <header class="row" id="header">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
@@ -141,16 +142,16 @@ Surjith S M / @surjithctly
               <div class="col-sm-6 col-md-5 wow fadeInDown runner-man" >
                   <img src="images/runner.png" alt="" class="runner-img">
               </div>
-                <div class="col-sm-6 col-md-8 col-md-push-4 wow fadeIn" >
-                  <div class="row">
-                    <div class="col-md-11 col-md-offset-1">
+              <div class="col-sm-6 col-md-8 col-md-push-4 wow fadeIn" >
+                <div class="row">
+                  <div class="col-md-11 col-md-offset-1">
                     <h2><span style="color:black;">Not</span> another smartwatch</h2>
                   </div>
                   <div class="col-md-10 col-md-offset-2">
                     <p>Every smartwatch comes with a stepcounter. Fans don't need that. So we created the Fantom to change what a smartwatch is forever. Now you can wear your club on your skin and never miss a beat of the action. <br>Real fans don't blink. </p>
                   </div>
                 </div>
-
+              </div>
             </div>
         </div>
     </section>
@@ -159,8 +160,10 @@ Surjith S M / @surjithctly
     <section class="row fans">
         <div class="container">
           <div class="row section-header wow fadeInUp">
+            <div class="col-xs-12">
               <h3>Totally dedicated to</h3>
               <h1>fans</h1>
+            </div>
           </div>
         </div>
     </section>
@@ -169,15 +172,14 @@ Surjith S M / @surjithctly
     <section class="row the-look" id="product">
         <div class="container">
             <div class="row section-header">
-
                 <div class="col-md-8 the-look-features">
                   <div class="row">
                     <div class="col-md-12">
-                        <h2>Wear your <span style="color:#5DD2F3">colors</span></h2>
-                      </div>
-                      <div class="col-md-6">
-                        <p>All the advanced engineering of the Fantom is enclosed in a silky smooth silicon armband that is both durable, light and surprisingly strong. But most importantly, it carries the proud and unfaded colors of your club. <br> Wear it.</p>
-                      </div>
+                      <h2>Wear your <span style="color:#5DD2F3">colors</span></h2>
+                    </div>
+                    <div class="col-md-6">
+                      <p>All the advanced engineering of the Fantom is enclosed in a silky smooth silicon armband that is both durable, light and surprisingly strong. But most importantly, it carries the proud and unfaded colors of your club. <br> Wear it.</p>
+                    </div>
                   </div>
                 </div>
 
@@ -198,7 +200,10 @@ Surjith S M / @surjithctly
               </div>
             </div>
             <div class="row text-center">
+              <div class="col-xs-12">
                 <img src="images/Fanband_6_34_TOKICKOFF.png" alt="">
+              </div>
+            </div>
             <div class="row benefit-notes">
 
 
