--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@ Surjith S M / @surjithctly
                   <form action="php/subscribe.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
                       <div class="input-group">
                           <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
+                           <input type="hidden" name="club" value="Manchester City">
                           <span class="input-group-addon">
                             <button type="submit" id="js-subscribe-btn"><img src="images/right-angle-white.png" alt=""></button>
                           </span>
