--- a/index_notcity.html
+++ b/index_notcity.html
@@ -59,29 +59,115 @@ Surjith S M / @surjithctly
     <section class="row signup" id="signup">
         <div class="container">
             <div class="row text-center">
-                <div class="signup-img wow zoomIn text-center">
+                <div class="col-xs-12 signup-img wow zoomIn text-center">
                     <img src="images/Fanband_MANCITY_BLUE-no-badge.png" alt="" >
                 </div>
-              </div>
-              <div class="row section-header wow fadeInUp">
+            </div>
+            <div class="row section-header wow fadeInUp">
+              <div class="col-xs-12">
                 <h2>Fantom is coming</h2>
                 <p>We're hard at work making Manchester City the first club to join Fantom. But only you City fans can make it happen. Give us all a push and sign up for free today. We'll notify you when Fantom is available.</p>
 
-            </div>
-            <form action="php/subscribe.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
-                <div class="input-group">
-                    <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
-                    <span class="input-group-addon">
-                <button type="submit" id="js-subscribe-btn"><img src="images/right-angle-white.png" alt=""></button>
-            </span>
-                </div>
-                <div id="js-subscribe-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
-                    <p>
-                        &nbsp;
-                    </p>
-                </div>
 
-            </form>
+                <form action="php/subscribe.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
+                  <div class="row wow fadeInUp">
+                      <div class="col-xs-8">
+                        <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
+                      </div>
+                      <div class="col-xs-4">
+                          <button type="submit" id="js-subscribe-btn">Sign me up!</button>
+                    </div>
+                    <div id="js-subscribe-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
+                        <p>
+                            &nbsp;
+                        </p>
+                    </div>
+                </form>
+              </div>
+            </div>
+
+    </section>
+
+
+
+
+
+    <!-- SIGNUP 2  --->
+    <section class="row signup" id="signup">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-xs-12 signup-img wow zoomIn text-center">
+                    <img src="images/Fanband_MANCITY_BLUE-no-badge.png" alt="" >
+                </div>
+            </div>
+            <div class="row section-header wow fadeInUp">
+              <div class="col-xs-12">
+                <h2>Fantom is coming</h2>
+                <p>We're hard at work making Manchester City the first club to join Fantom. But only you City fans can make it happen. Give us all a push and sign up for free today. We'll notify you when Fantom is available.</p>
+
+
+                <form action="php/subscribe.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
+                  <div class="row wow fadeInUp">
+                      <div class="col-sm-8" >
+                          <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
+                        </div>
+                        <div class="col-sm-8">
+                          <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
+                        </div>
+
+                      <div class="col-sm-4" >
+                          <button type="submit" id="js-subscribe-btn" style=" height:60px; margin:0 -15px;">Sign me up!</button>
+                      </div>
+                  </div>
+                    <div id="js-subscribe-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
+                        <p>
+                            &nbsp;
+                        </p>
+                    </div>
+                </form>
+
+            </div>
+          </div>
+        </div>
+
+    </section>
+
+    <!-- SIGNUP  many clubs  --->
+    <section class="row signup" id="signup">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-xs-12 signup-img wow zoomIn text-center">
+                    <img src="images/Fanband_MANCITY_BLUE-no-badge.png" alt="" >
+                </div>
+            </div>
+            <div class="row section-header wow fadeInUp">
+              <div class="col-xs-12">
+                <h2>Fantom is coming</h2>
+                <p>We're hard at work making Manchester City the first club to join Fantom. But only you City fans can make it happen. Give us all a push and sign up for free today. We'll notify you when Fantom is available.</p>
+
+
+                <form action="php/subscribe.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
+                  <div class="row wow fadeInUp">
+                      <div class="col-sm-8" >
+                          <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
+                        </div>
+                        <div class="col-sm-8">
+                          <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
+                        </div>
+
+                      <div class="col-sm-4" >
+                          <button type="submit" id="js-subscribe-btn" style=" height:60px; margin:0 -15px;">Sign me up!</button>
+                      </div>
+                  </div>
+                    <div id="js-subscribe-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
+                        <p>
+                            &nbsp;
+                        </p>
+                    </div>
+                </form>
+
+            </div>
+          </div>
         </div>
 
     </section>
@@ -95,44 +181,27 @@ Surjith S M / @surjithctly
 
             </div>
 
-
-            <form action="php/subscribe.php" id="subscribeform" class="row club-form mb-lg" method="post">
-
-              <div class="input-group">
-
-              <input type="email" class="form-control alt" name="email" placeholder="Enter Your Email Address">
-              <span class="input-group-addon">
-                  <button type="submit" id="js-subscribe-btn"><img src="images/right-angle-white.png" alt=""></button>
-              </span>
+            <form action="php/signup-club.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
+            <div class="row wow fadeInUp">
+              <div class="col-sm-8" id="clubahead">
+                <input type="club" class="form-control alt typeahead" name="club" placeholder="Your club">
+              </div>
+              <div class="col-sm-8">
+                <input type="email" class="form-control alt" name="email" placeholder="Your email">
+              </div>
+              <div class="col-sm-4">
+                  <button type="submit" id="js-subscribe-btn" style=" height:60px;">Sign me up!</button>
+              </div>
             </div>
-            <div id="js-subscribe-result" class="text-center" data-success-msg="Almost finished. Please check your email and verify." data-error-msg="Oops. Something went wrong.">
+            <div id="js-subscribe-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
                 <p>
                     &nbsp;
                 </p>
             </div>
 
-          </form>
 
-
-          <form action="php/subscribe.php" id="subscribeform" class="row club-form mb-lg" method="post">
-
-            <div class="input-group" id="clubahead">
-
-
-              <input class="form-control alt typeahead" type="text" placeholder="Enter club name" autocomplete="off">
-              <input type="email" class="form-control alt" name="email" autocomplete="off" placeholder="Enter Your Email Address">
-
-              <button type="submit" id="js-subscribe-btn"><img src="images/right-angle-white.png" alt=""></button>
-
-          </div>
-          <div id="js-subscribe-result" class="text-center" data-success-msg="Almost finished. Please check your email and verify." data-error-msg="Oops. Something went wrong.">
-              <p>
-                  &nbsp;
-              </p>
-          </div>
 
         </form>
-
         </div>
 
 
