--- a/index_notcity.html
+++ b/index_notcity.html
@@ -27,8 +27,12 @@ Surjith S M / @surjithctly
 
     <!-- CSS Plugin Files -->
     <link href="css/lib/bootstrap.min.css" rel="stylesheet">
-
+    <link href="css/plugins/font-awesome.min.css" rel="stylesheet">
+    <link href="css/plugins/lineicons.css" rel="stylesheet">
+    <link href="vendors/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <link href="vendors/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css" rel="stylesheet">
     <link href="vendors/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet">
+    <link href="vendors/owl-carousel/assets/owl.carousel.css" rel="stylesheet">
     <link href="css/plugins/animate.css" rel="stylesheet">
 
     <!-- Preloader -->
@@ -55,122 +59,7 @@ Surjith S M / @surjithctly
 
 
 
-    <!--==========Sign-up==========-->
-    <section class="row signup" id="signup">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-xs-12 signup-img wow zoomIn text-center">
-                    <img src="images/Fanband_MANCITY_BLUE-no-badge.png" alt="" >
-                </div>
-            </div>
-            <div class="row section-header wow fadeInUp">
-              <div class="col-xs-12">
-                <h2>Fantom is coming</h2>
-                <p>We're hard at work making Manchester City the first club to join Fantom. But only you City fans can make it happen. Give us all a push and sign up for free today. We'll notify you when Fantom is available.</p>
 
-
-                <form action="php/subscribe.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
-                  <div class="row wow fadeInUp">
-                      <div class="col-xs-8">
-                        <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
-                      </div>
-                      <div class="col-xs-4">
-                          <button type="submit" id="js-subscribe-btn">Sign me up!</button>
-                    </div>
-                    <div id="js-subscribe-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
-                        <p>
-                            &nbsp;
-                        </p>
-                    </div>
-                </form>
-              </div>
-            </div>
-
-    </section>
-
-
-
-
-
-    <!-- SIGNUP 2  --->
-    <section class="row signup" id="signup">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-xs-12 signup-img wow zoomIn text-center">
-                    <img src="images/Fanband_MANCITY_BLUE-no-badge.png" alt="" >
-                </div>
-            </div>
-            <div class="row section-header wow fadeInUp">
-              <div class="col-xs-12">
-                <h2>Fantom is coming</h2>
-                <p>We're hard at work making Manchester City the first club to join Fantom. But only you City fans can make it happen. Give us all a push and sign up for free today. We'll notify you when Fantom is available.</p>
-
-
-                <form action="php/subscribe.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
-                  <div class="row wow fadeInUp">
-                      <div class="col-sm-8" >
-                          <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
-                        </div>
-                        <div class="col-sm-8">
-                          <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
-                        </div>
-
-                      <div class="col-sm-4" >
-                          <button type="submit" id="js-subscribe-btn" style=" height:60px; margin:0 -15px;">Sign me up!</button>
-                      </div>
-                  </div>
-                    <div id="js-subscribe-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
-                        <p>
-                            &nbsp;
-                        </p>
-                    </div>
-                </form>
-
-            </div>
-          </div>
-        </div>
-
-    </section>
-
-    <!-- SIGNUP  many clubs  --->
-    <section class="row signup" id="signup">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-xs-12 signup-img wow zoomIn text-center">
-                    <img src="images/Fanband_MANCITY_BLUE-no-badge.png" alt="" >
-                </div>
-            </div>
-            <div class="row section-header wow fadeInUp">
-              <div class="col-xs-12">
-                <h2>Fantom is coming</h2>
-                <p>We're hard at work making Manchester City the first club to join Fantom. But only you City fans can make it happen. Give us all a push and sign up for free today. We'll notify you when Fantom is available.</p>
-
-
-                <form action="php/subscribe.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
-                  <div class="row wow fadeInUp">
-                      <div class="col-sm-8" >
-                          <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
-                        </div>
-                        <div class="col-sm-8">
-                          <input type="email" class="form-control alt" name="email" placeholder="Enter Email to sign up">
-                        </div>
-
-                      <div class="col-sm-4" >
-                          <button type="submit" id="js-subscribe-btn" style=" height:60px; margin:0 -15px;">Sign me up!</button>
-                      </div>
-                  </div>
-                    <div id="js-subscribe-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
-                        <p>
-                            &nbsp;
-                        </p>
-                    </div>
-                </form>
-
-            </div>
-          </div>
-        </div>
-
-    </section>
 
     <!--==========Sign-up others==========-->
     <section class="row signup-2" id="signup2">
@@ -181,19 +70,19 @@ Surjith S M / @surjithctly
 
             </div>
 
-            <form action="php/signup-club.php" id="subscribeform" class="row newsletter-form mb-lg" method="post">
+            <form action="php/clubsignup.php" id="clubsignup-form" class="row newsletter-form mb-lg" method="post">
             <div class="row wow fadeInUp">
               <div class="col-sm-8" id="clubahead">
-                <input type="club" class="form-control alt typeahead" name="club" placeholder="Your club">
+                <input type="text" class="form-control alt typeahead" name="club" placeholder="Your club">
               </div>
               <div class="col-sm-8">
                 <input type="email" class="form-control alt" name="email" placeholder="Your email">
               </div>
               <div class="col-sm-4">
-                  <button type="submit" id="js-subscribe-btn" style=" height:60px;">Sign me up!</button>
+                  <button type="submit" id="js-clubsignup-btn" style=" height:60px;">Sign me up!</button>
               </div>
             </div>
-            <div id="js-subscribe-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
+            <div id="js-clubsignup-result" class="text-center" data-success-msg="Great! We just sent our thanks through email." data-error-msg="Oops. Something went wrong.">
                 <p>
                     &nbsp;
                 </p>
@@ -330,7 +219,7 @@ $('#clubahead .typeahead').typeahead({
   source: substringMatcher(clubs)
 });
     </script>
-    <!--
+
     <script src="vendors/owl-carousel/owl.carousel.js"></script>
     <script src="vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
     <script src="vendors/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js"></script>
@@ -341,9 +230,9 @@ $('#clubahead .typeahead').typeahead({
     <script src="js/plugins/wow.min.js"></script>
     <script src="js/plugins/validate.js"></script>
 
-    <!-- Includes --
-    <script src="js/includes/pre-order.js"></script>
-    <script src="js/includes/subscribe.js"></script>
+    <!-- Includes
+    <script src="js/includes/subscribe.js"></script>-->
+    <script src="js/includes/clubsignup.js"></script>
     <script src="js/includes/contact.js"></script>
 
     <!-- Main JS -->
